# PyAstroSALT

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  mkdocs.yml  noxfile.py  pyproject.toml  requirements-dev.txt  setup.cfg
.github/workflows/: execute_tests.yml  publish-docs.yml  publish.yml
docs/: api.md  conf.py  development.md  index.md  installation.md  quickstart.md  submit-a-proposal.md
docs_src/quickstart/: resubmission.py
src/pyastrosalt/: __init__.py  auth.py  exceptions.py  proposal.py  requests.py  session.py  submission.py  web.py
src/saltastro/: proposal.py  web.py
tests/: conftest.py  test_auth.py  test_exceptions.py  test_proposal.py  test_requests.py  test_submission.py  test_web.py
tests/data/: proposal
