[project]
name = "PyAstroSALT"
description = "API access for the Southern African Large elescope (SALT)."
readme = "README.md"
authors = [{name = "SALT Astronomy Operations", email = "salthelp@salt.ac.za"}]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "defusedxml>=0.7.1",
    "requests>=2.32.5",
    "types-defusedxml>=0.7.0.20250822",
]

[dependency-groups]
dev = [
    "freezegun>=1.5.5",
    "mkdocs-material>=9.7.0",
    "mkdocstrings[python]>=0.30.1",
    "mypy>=1.18.2",
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "requests-mock>=1.12.1",
    "responses>=0.25.8",
    "ruff>=0.14.4",
    "types-requests>=2.32.4.20250913",
]

[build-system]
requires = ["setuptools>=78.1.0"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint]
select = ["D", "I"]
ignore = [
    # Don't enforce the docstring summary to be on the first line.
    "D212",
]

[tool.ruff.lint.per-file-ignores]
# Don't check docstrings in test files.
"tests/**" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"
