[metadata]
name = PyAstroSALT
version = attr: pyastrosalt.__version__
description = Perform tasks related to proposals for the Southern African Large Telescope.
long_description = file: README.md
long_description_content_type: text/markdown
url = https://github.com/saltastroops/PyAstroSALT
author = Southern African Large Telescope
author_email = salthelp@salt.ac.za
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
package_dir =
    =src
packages = find:
include_package_data = True
install_requires =
    requests>=2.27.0
    websockets>=10.3
[options.packages.find]
where = src
exclude =
    test*

# [options.entry_points]
# console_scripts
#     mycommand = pyastrosalt.module_name:function_name

# ----
# mypy
# ----

[mypy]
strict = True
python_version = 3.7
warn_unused_configs = True
show_error_context = True
pretty = True
namespace_packages = True

[mypy-requests.*]
ignore_missing_imports = True

# ------
# flake8
# ------

[flake8]
max-line-length = 88
docstring-convention = numpy
ignore =
    # flake8
    D205  # 1 blank line required between summary line and description
    D400  # First line should end with a period
    W503  # line break before binary operator
    # pycodestyle
    D100  # missing docstring in public module
    D104  # missing docstring in public package

# ------
# pytest
# ------

[tool:pytest]
testpaths = tests
addopts = --strict-markers
xfail_strict = True
asyncio_mode = auto

[coverage:report]
show_missing = True
skip_covered = True

[coverage:paths]
source =
    src/pyastrosalt

# ---
# tox
# ---

[tox:tox]
envlist = ["3.7", "3.8", "3.9", "3.10"]
isolated_build = True

[testenv]
deps =
    pytest
    pytest-asyncio
    pytest-cov
    responses
commands =
    pytest {posargs:--cov --strict-markers}

[testenv:typecheck]
deps =
    mypy
commands =
    mypy {posargs:src docs_src}

[testenv:format]
skip_install = True
deps =
    black
commands =
    black {posargs:--check --diff src docs_src tests}

[testenv:imports]
skip_install = True
deps =
    isort
commands =
    isort {posargs:--check --diff src docs_src tests}

[testenv:lint]
skip_install = True
deps =
    flake8
    flake8-docstrings
    flake8-print
commands =
    flake8 {posargs:src docs_src tests}

[testenv:docs]
deps =
    sphinx
    sphinx-autodoc-typehints
    sphinx-book-theme
    myst-nb
commands =
    sphinx-build -W -b html -d {envtmpdir}/doctrees docs {envtmpdir}/html

